fixed the burger nav z-index

--- a/css/tablet-styles.css
+++ b/css/tablet-styles.css
@@ -83,6 +83,7 @@
         height: 10px;
         padding: 3px 23px 33px 13px;
         position: absolute;
+        z-index: 5;
         box-shadow: 0 0 50px rgb(3, 186, 192);
         background-color: rgba(3, 186, 192, 0.466);
         border: 2px solid white;
